--- a/partials/_navbar.html
+++ b/partials/_navbar.html
@@ -37,7 +37,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
                     <a class="navbar-brand" href="#"
-                      ><img src="assets/images/logo.svg" alt=""
+                      ><img src="assets/images/logo_wit.png" alt=""
                     /></a>
                   </div>
                   <div>
